<package>
  <name>seeker</name>
  <version>0.0.0</version>
  <description>Seeker metapackage</description>

  <maintainer email="syrianspock@gmail.com">Salah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>seeker_bringup</run_depend>

  <export>
    <metapackage />
  </export>

</package>
