<?xml version="1.0"?>
<package format="2">
  <name>seeker_alarm_display</name>
  <version>0.0.0</version>
  <description>Displays an alarm when the robot detects a mine</description>

  <maintainer email="antoine@antoinealb.net">Antoine</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
