<?xml version="1.0"?>
<package format="2">
  <name>seeker_bringup</name>
  <version>0.0.0</version>
  <description>The seeker_bringup package</description>

  <maintainer email="syrianspock@gmail.com">Salah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>seeker_alarm_display</build_depend>
  <build_depend>seeker_map_builder</build_depend>
  <build_depend>seeker_mine_detector</build_depend>
  <build_depend>seeker_msgs</build_depend>
  <build_depend>uavcan_bridge</build_depend>

  <export>
  </export>
</package>
