<?xml version="1.0"?>
<package format="2">
  <name>seeker_map_builder</name>
  <version>0.0.0</version>
  <description>The seeker_map_builder package</description>

  <maintainer email="syrianspock@gmail.com">Salah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
