<?xml version="1.0"?>
<package format="2">
  <name>seeker_mine_detector</name>
  <version>0.0.0</version>
  <description>The seeker_mine_detector package</description>

  <maintainer email="syrianspock@gmail.com">Salah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <export>
  </export>
</package>
