<?xml version="1.0"?>
<package format="2">
  <name>seeker_msgs</name>
  <version>0.0.0</version>
  <description>The seeker_msgs package</description>

  <maintainer email="syrianspock@gmail.com">Salah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <export>
  </export>
</package>
